ComOps/rosSerialPackageTest/serial_python_pkg/log/build_2023-05-10_21-09-31/serial_python_pkg/stdout_stderr.log
running egg_info
creating build/serial_python_pkg/serial_python_pkg.egg-info
writing build/serial_python_pkg/serial_python_pkg.egg-info/PKG-INFO
writing dependency_links to build/serial_python_pkg/serial_python_pkg.egg-info/dependency_links.txt
writing entry points to build/serial_python_pkg/serial_python_pkg.egg-info/entry_points.txt
writing requirements to build/serial_python_pkg/serial_python_pkg.egg-info/requires.txt
writing top-level names to build/serial_python_pkg/serial_python_pkg.egg-info/top_level.txt
writing manifest file 'build/serial_python_pkg/serial_python_pkg.egg-info/SOURCES.txt'
reading manifest file 'build/serial_python_pkg/serial_python_pkg.egg-info/SOURCES.txt'
writing manifest file 'build/serial_python_pkg/serial_python_pkg.egg-info/SOURCES.txt'
running build
running build_py
creating /home/robosub/robosub/RPI-Core/ComOps/rosSerialPackageTest/serial_python_pkg/build/serial_python_pkg/build
creating /home/robosub/robosub/RPI-Core/ComOps/rosSerialPackageTest/serial_python_pkg/build/serial_python_pkg/build/lib
creating /home/robosub/robosub/RPI-Core/ComOps/rosSerialPackageTest/serial_python_pkg/build/serial_python_pkg/build/lib/serial_python_pkg
copying serial_python_pkg/arduino_bridge.py -> /home/robosub/robosub/RPI-Core/ComOps/rosSerialPackageTest/serial_python_pkg/build/serial_python_pkg/build/lib/serial_python_pkg
copying serial_python_pkg/__init__.py -> /home/robosub/robosub/RPI-Core/ComOps/rosSerialPackageTest/serial_python_pkg/build/serial_python_pkg/build/lib/serial_python_pkg
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
creating /home/robosub/robosub/RPI-Core/ComOps/rosSerialPackageTest/serial_python_pkg/install/serial_python_pkg/lib/python3.10/site-packages/serial_python_pkg
copying /home/robosub/robosub/RPI-Core/ComOps/rosSerialPackageTest/serial_python_pkg/build/serial_python_pkg/build/lib/serial_python_pkg/arduino_bridge.py -> /home/robosub/robosub/RPI-Core/ComOps/rosSerialPackageTest/serial_python_pkg/install/serial_python_pkg/lib/python3.10/site-packages/serial_python_pkg
copying /home/robosub/robosub/RPI-Core/ComOps/rosSerialPackageTest/serial_python_pkg/build/serial_python_pkg/build/lib/serial_python_pkg/__init__.py -> /home/robosub/robosub/RPI-Core/ComOps/rosSerialPackageTest/serial_python_pkg/install/serial_python_pkg/lib/python3.10/site-packages/serial_python_pkg
byte-compiling /home/robosub/robosub/RPI-Core/ComOps/rosSerialPackageTest/serial_python_pkg/install/serial_python_pkg/lib/python3.10/site-packages/serial_python_pkg/arduino_bridge.py to arduino_bridge.cpython-310.pyc
  File "/home/robosub/robosub/RPI-Core/ComOps/rosSerialPackageTest/serial_python_pkg/install/serial_python_pkg/lib/python3.10/site-packages/serial_python_pkg/arduino_bridge.py", line 13
    your Arduino's port
                ^
SyntaxError: unterminated string literal (detected at line 13)

byte-compiling /home/robosub/robosub/RPI-Core/ComOps/rosSerialPackageTest/serial_python_pkg/install/serial_python_pkg/lib/python3.10/site-packages/serial_python_pkg/__init__.py to __init__.cpython-310.pyc
running install_data
creating /home/robosub/robosub/RPI-Core/ComOps/rosSerialPackageTest/serial_python_pkg/install/serial_python_pkg/share/ament_index
creating /home/robosub/robosub/RPI-Core/ComOps/rosSerialPackageTest/serial_python_pkg/install/serial_python_pkg/share/ament_index/resource_index
creating /home/robosub/robosub/RPI-Core/ComOps/rosSerialPackageTest/serial_python_pkg/install/serial_python_pkg/share/ament_index/resource_index/packages
copying resource/serial_python_pkg -> /home/robosub/robosub/RPI-Core/ComOps/rosSerialPackageTest/serial_python_pkg/install/serial_python_pkg/share/ament_index/resource_index/packages
copying package.xml -> /home/robosub/robosub/RPI-Core/ComOps/rosSerialPackageTest/serial_python_pkg/install/serial_python_pkg/share/serial_python_pkg
running install_egg_info
Copying build/serial_python_pkg/serial_python_pkg.egg-info to /home/robosub/robosub/RPI-Core/ComOps/rosSerialPackageTest/serial_python_pkg/install/serial_python_pkg/lib/python3.10/site-packages/serial_python_pkg-0.0.0-py3.10.egg-info
running install_scripts
Installing test script to /home/robosub/robosub/RPI-Core/ComOps/rosSerialPackageTest/serial_python_pkg/install/serial_python_pkg/lib/serial_python_pkg
writing list of installed files to '/home/robosub/robosub/RPI-Core/ComOps/rosSerialPackageTest/serial_python_pkg/build/serial_python_pkg/install.log'
